--- a/website/static/styles/login.css
+++ b/website/static/styles/login.css
@@ -104,7 +104,7 @@ label {
     padding: 10px 17px;
     border-radius: 4px;
     border: none;
-    background-color: rgb(0, 0, 156);
+    background-color: #ff9966;
     color: white;
     margin-bottom: 10px;
 }
