--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="../scripts/1-web.js"></script>
+    <script src="../static/scripts/1-web.js"></script>
 </head>
     <body>
     <nav>
@@ -21,7 +21,6 @@
             <li><a class="active" href="/">Home</a></li>
             <li><a href="/login">Login</a></li>
             <li><a href="/sign-up">Sign-up</a></li>
-            <li><a href="/logout">Logout</a></li>
         </ul>
     </nav>
     {% with messages = get_flashed_messages(with_categories=true) %}
@@ -30,7 +29,7 @@
     {% if category == 'error' %}
     <div class="the-alert-danger">
         {{ message }}
-        <button type="button" class="danger-btn" data-dismiss="alert">
+        <button type="button" class="danger-btn" data-dismiss="danger-btn">
             <span aria-hidden="true" class="the_alert">&times;</span>
         </button>
     </div>
