--- a/website/static/styles/hairs_prices.css
+++ b/website/static/styles/hairs_prices.css
@@ -31,7 +31,7 @@ label.logo {
     font-size: 35px;
     color: black;
     padding: 0 20px;
-    font-weight: bold;
+    font-weight: medium;
 }
 nav ul {
     float: right;
