--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -45,6 +45,7 @@
     {% endif %}
     {% endwith %}
     <section class="the-img">{% block content %}
-        {% endblock %}</section>
+       {% endblock %}
+    </section>
 </body>
 </html>
