--- a/website/templates/views.html
+++ b/website/templates/views.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <link rel="stylesheet" href="../static/styles/hairs_prices.css">
+    <script src="../static/scripts/2-web.js"></script>
 </head>
 <body>
     <nav>  
@@ -22,7 +23,7 @@
         </ul>
     </nav>
     <div class="all-div">
-    <div class="carry_all">
+    <div class="carry_all" id="carry_all_1" data-href="/product/1" >
         <div class="carry_img">
             <img class="hair" src="../static/images/orange.jpg">
         </div>
@@ -34,7 +35,7 @@
             <span class="content-sp"><b>#25,000</b></span>
         </div>
     </div>
-    <div class="carry_all">
+    <div class="carry_all"  id="carry_all_2" data-href="/product/2">
         <div class="carry_img">
             <img class="hair" src="../static/images/bone.jpg.png">
         </div>
@@ -46,7 +47,7 @@
             <span class="content-sp"><b>#30,000</b></span>
         </div>
     </div>
-    <div class="carry_all">
+    <div class="carry_all" id="carry_all_3" data-href="/product/3">
         <div class="carry_img">
             <img class="hair" src="../static/images/hairpics9.jpg">
         </div>
@@ -58,7 +59,7 @@
             <span class="content-sp"><b>#25,000</b></span>
         </div>
     </div>
-    <div class="carry_all">
+    <div class="carry_all"  id="carry_all_4" data-href="/product/4">
         <div class="carry_img">
             <img class="hair" src="../static/images/short_curls.jpg.jfif">
         </div>
@@ -70,7 +71,7 @@
             <span class="content-sp"><b>#19,000</b></span>
         </div>
     </div>
-    <div class="carry_all">
+    <div class="carry_all" id="carry_all_5" data-href="/product/5">
         <div class="carry_img">
             <img class="hair" src="../static/images/pixie.jpg">
         </div>
@@ -82,7 +83,7 @@
             <span class="content-sp"><b>#40,000</b></span>
         </div>
     </div>
-    <div class="carry_all">
+    <div class="carry_all" id="carry_all_6" data-href="/product/6">
         <div class="carry_img">
             <img class="hair" src="../static/images/IMG_2603.jpeg">
         </div>
@@ -94,7 +95,7 @@
             <span class="content-sp"><b>#58,000</b></span>
         </div>
     </div>
-    <div class="carry_all">
+    <div class="carry_all" id="carry_all_7" data-href="/product/7">
         <div class="carry_img">
             <img class="hair" src="../static/images/bob2.jpg">
         </div>
@@ -106,7 +107,7 @@
             <span class="content-sp"><b>#30,000</b></span>
         </div>
     </div>
-    <div class="carry_all">
+    <div class="carry_all" id="carry_all_8" data-href="/product/8">
         <div class="carry_img">
             <img class="hair" src="../static/images/fullfrontal.jpg">
         </div>
