--- a/website/templates/seller.html
+++ b/website/templates/seller.html
@@ -18,7 +18,7 @@
         </label>
         <label class="logo"><i>M</i>o<i>ES</i> <i>C</i>o<i>ll</i>ectio<i>N</i></label>
         <ul>
-            <li><a class="active" href="/logout">Logout</a></li>
+            <li><a class="active" href="/seller_logout">Logout</a></li>
         </ul>
     </nav>
     <section class="the-img">
