--- a/website/templates/seller_login.html
+++ b/website/templates/seller_login.html
@@ -44,34 +44,34 @@
     {% endfor %}
     {% endif %}
     {% endwith %}
-    <section class="the-img">
-<form method="POST">
-<h3 align="center">Login</h3>
-<div class="content-div">
-<div class="em-cont">
-    <label for="email">Email Address</label>
-    <input 
-        type="email"
-        class="the-control"
-        id="email"
-        name="email" 
-        placeholder="Enter email"
-    />
-    </div>
+<section class="the-img">
+    <form method="POST" action="{{ url_for('seller_auth.seller_login') }}">
+    <h3 align="center">Login</h3>
+    <div class="content-div">
     <div class="em-cont">
-        <label for="password">Password</label>
+        <label for="email">Email Address</label>
         <input 
-            type="password"
+            type="email"
             class="the-control"
-            id="password"
-            name="password" 
-            placeholder="Enter password"
+            id="email"
+            name="email" 
+            placeholder="Enter email"
         />
+        </div>
+        <div class="em-cont">
+            <label for="password">Password</label>
+            <input 
+                type="password"
+                class="the-control"
+                id="password"
+                name="password" 
+                placeholder="Enter password"
+            />
+        </div>
+        <br />
+                <button type="submit" class="primary-btn">Login</button> 
     </div>
-    <br />
-            <button type="submit" class="primary-btn">Login</button> 
-</div>
-</form>
+    </form>
 </section>
 </body>
 </html>
