--- a/website/templates/views.html
+++ b/website/templates/views.html
@@ -23,103 +23,21 @@
         </ul>
     </nav>
     <div class="all-div">
-    <div class="carry_all" id="carry_all_1" data-href="/product/1" >
+        {% for product in products.values() %}
+        <div class="carry_all">
         <div class="carry_img">
-            <img class="hair" src="../static/images/orange.jpg">
+            <img class="hair" src="../{{ product.productImage|replace('website', '') }}">
         </div>
         <div class="carry_content">
-            <span class="content-sp"><b>Wavy</b></span>
-            <span class="content-sp">18 Inch</span>
-            <span class="content-sp">300g</span>
-            <span class="content-sp">Colors: All colors</span>
-            <span class="content-sp"><b>#25,000</b></span>
+            <span class="content-sp"><b>Name: {{ product.productName }}</b></span>
+            <span class="content-sp">Inches: {{ product.productInches}}</span>
+            <span class="content-sp">Gram: {{product.productQuantity}}</span>
+            <span class="content-sp">Colors: {{product.productColor }}</span>
+            <span class="content-sp"><b>Price: {{ product.productPrice }}</b></span>
         </div>
     </div>
-    <div class="carry_all"  id="carry_all_2" data-href="/product/2">
-        <div class="carry_img">
-            <img class="hair" src="../static/images/bone.jpg.png">
-        </div>
-        <div class="carry_content">
-            <span class="content-sp"><b>Bone straight</b></span>
-            <span class="content-sp">14 Inch</span>
-            <span class="content-sp">200g</span>
-            <span class="content-sp">Colors: All colors</span>
-            <span class="content-sp"><b>#30,000</b></span>
-        </div>
+    {% endfor %}
     </div>
-    <div class="carry_all" id="carry_all_3" data-href="/product/3">
-        <div class="carry_img">
-            <img class="hair" src="../static/images/hairpics9.jpg">
-        </div>
-        <div class="carry_content">
-            <span class="content-sp"><b>Wavy hair </b></span>
-            <span class="content-sp">14 Inch</span>
-            <span class="content-sp">200g</span>
-            <span class="content-sp">Colors: All colors</span>
-            <span class="content-sp"><b>#25,000</b></span>
-        </div>
-    </div>
-    <div class="carry_all"  id="carry_all_4" data-href="/product/4">
-        <div class="carry_img">
-            <img class="hair" src="../static/images/short_curls.jpg.jfif">
-        </div>
-        <div class="carry_content">
-            <span class="content-sp"><b>short curls</b></span>
-            <span class="content-sp">8 Inches</span>
-            <span class="content-sp">300g</span>
-            <span class="content-sp">Colors: All colors</span>
-            <span class="content-sp"><b>#19,000</b></span>
-        </div>
-    </div>
-    <div class="carry_all" id="carry_all_5" data-href="/product/5">
-        <div class="carry_img">
-            <img class="hair" src="../static/images/pixie.jpg">
-        </div>
-        <div class="carry_content">
-            <span class="content-sp"><b>Pixie Curls</b></span>
-            <span class="content-sp">28 Inches</span>
-            <span class="content-sp">300g</span>
-            <span class="content-sp">Colors: All colors</span>
-            <span class="content-sp"><b>#40,000</b></span>
-        </div>
-    </div>
-    <div class="carry_all" id="carry_all_6" data-href="/product/6">
-        <div class="carry_img">
-            <img class="hair" src="../static/images/IMG_2603.jpeg">
-        </div>
-        <div class="carry_content">
-            <span class="content-sp"><b>Full Frontal Wavy Hair</b></span>
-            <span class="content-sp"> 32 Inches</span>
-            <span class="content-sp">300g</span>
-            <span class="content-sp">Colors: All colors</span>
-            <span class="content-sp"><b>#58,000</b></span>
-        </div>
-    </div>
-    <div class="carry_all" id="carry_all_7" data-href="/product/7">
-        <div class="carry_img">
-            <img class="hair" src="../static/images/bob2.jpg">
-        </div>
-        <div class="carry_content">
-            <span class="content-sp"><b>Short Bob</b></span>
-            <span class="content-sp">10 Inches</span>
-            <span class="content-sp">300g</span>
-            <span class="content-sp">Colors: All colors</span>
-            <span class="content-sp"><b>#30,000</b></span>
-        </div>
-    </div>
-    <div class="carry_all" id="carry_all_8" data-href="/product/8">
-        <div class="carry_img">
-            <img class="hair" src="../static/images/fullfrontal.jpg">
-        </div>
-        <div class="carry_content">
-            <span class="content-sp"><b>Full frontal Bone Straight</b></span>
-            <span class="content-sp">32 Inches</span>
-            <span class="content-sp">300g</span>
-            <span class="content-sp">Colors: All colors</span>
-            <span class="content-sp"><b>#38,000</b></span>
-        </div>
-    </div>
-</div>
 </body>
 </html>
 
