--- a/website/templates/display.html
+++ b/website/templates/display.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <link rel="stylesheet" href="../static/styles/hairs_prices.css">
-    <script src="../static/scripts/1-web.js"></script>
+    <script src="../static/scripts/2-web.js"></script>
 </head>
 <body>
     <nav>  
@@ -22,23 +22,6 @@
             <li><a href="/logout">Logout</a></li>
         </ul>
     </nav>
-    <div class="all-div">
-        {% for product in products.values() %}
-        <div class="carry_all">
-        <div class="carry_img">
-            <img class="hair" src="../{{ product.productImage|replace('website', '') }}">
-        </div>
-        <div class="carry_content">
-            <span class="content-sp"><b>Name: {{ product.productName }}</b></span>
-            <span class="content-sp">Inches: {{ product.productInches}}</span>
-            <span class="content-sp">Gram: {{product.productQuantity}}</span>
-            <span class="content-sp">Colors: {{product.productColor }}</span>
-            <span class="content-sp"><b>Price: {{ product.productPrice }}</b></span>
-        </div>
-    </div>
-    {% endfor %}
-    </div>
-</body>
-</html>
-
-
+        <div id="capturedContent" class="all-div"></div>
+    </body>
+    </html>
