--- a/website/templates/views.html
+++ b/website/templates/views.html
@@ -9,6 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <link rel="stylesheet" href="../static/styles/hairs_prices.css">
     <script src="../static/scripts/1-web.js"></script>
+    <script src="../static/scripts/2-web.js"></script>
 </head>
 <body>
     <nav>  
