--- a/website/templates/display.html
+++ b/website/templates/display.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hairs and Prices</title>
-    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <link rel="stylesheet" href="../static/styles/hairs_prices.css">
+    <link rel="stylesheet" href="../static/styles/display.css">
     <script src="../static/scripts/2-web.js"></script>
 </head>
 <body>
@@ -22,6 +21,8 @@
             <li><a href="/logout">Logout</a></li>
         </ul>
     </nav>
-        <div id="capturedContent" class="all-div"></div>
+        <div id="capturedContent" class="all-div">
+            {{ content|safe }}
+        </div>
     </body>
     </html>
