--- a/website/static/styles/display.css
+++ b/website/static/styles/display.css
@@ -80,6 +80,8 @@ a.active,a:hover {
     margin: 0;
     margin-top: 100px; 
     padding-left: 40px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
 }
 .carry_all {
     width: 100%;
@@ -109,6 +111,89 @@ a.active,a:hover {
     font-size: 22px;
     font-family: myFont;
     line-height: 25px;
+}
+.overall {
+    display: block;
+}
+
+.the_links {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    margin-left: 6px;
+    align-items: center;
+    color: rgb(190, 189, 189); 
+}
+.the_ref {
+    padding: 6px;
+    font-family: myFont;
+    color: rgb(190, 189, 189);
+    font-size: 20px;
+}
+.the_href.active,.the_ref:hover {
+    background: none;
+    transition: .5s;
+}
+.the_cal {
+    display: flex;
+}
+.inche {
+    margin-left: 10px; 
+    width: 40px;
+    height: 40px;
+    border: 1px solid rgb(240, 237, 237);
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 11px;
+}
+.chart {
+    border: none;
+    font-family: union,Arial,Helvetica,sans-serif;
+    background: white;
+    border-bottom: 1px solid black;
+    margin: 0;
+    padding: 0;
+    margin: 10px;
+    font-size: 12px;
+}
+p {
+    margin-left: 10px;
+    color: #242420;;
+
+}
+.add_cart_overall {
+    display: flex;
+    align-items: center;
+}
+.add-cart {
+    width: 300px;
+    height: 45px;
+    background-color: orange;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: myFont;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 6px;
+    margin-top: 20px;
+    margin-left: 10px;
+}
+.add-cart:hover {
+    opacity: 0.7;
+    cursor: pointer;
+}
+.love {
+    border: 1px solid rgb(238, 230, 230);
+    width: 45px;
+    height: 45px;
+    border-radius: 6px;
+    line-height: 45px;
+    margin-top: 20px;
+    margin-left: 10px;
+    font-size: 25px;
 }
 
 @media (max-width: 952px) {
