--- a/website/templates/display.html
+++ b/website/templates/display.html
@@ -53,19 +53,19 @@
                         </span>
                 </div>
                 <div class="the_cal">
-                    <div class="inche">8</div>
-                    <div class="inche">10</div>
-                    <div class="inche">12</div>
-                    <div class="inche">14</div>
-                    <div class="inche" >16</div>
-                    <div class="inche">18</div>
-                    <div class="inche" >20</div>
-                    <div class="inche">22</div>
-                    <div class="inche">24</div>
-                    <div class="inche">26</div>
-                    <div class="inche" >28</div>
-                    <div class="inche">30</div>
-                    <div class="inche">32</div>
+                    <div class="inche" data-inches="8">8</div>
+                    <div class="inche" data-inches="10">10</div>
+                    <div class="inche"data-inches="12" >12</div>
+                    <div class="inche" data-inches="14">14</div>
+                    <div class="inche" data-inches="16">16</div>
+                    <div class="inche" data-inches="18">18</div>
+                    <div class="inche" data-inches="20">20</div>
+                    <div class="inche" data-inches="22">22</div>
+                    <div class="inche" data-inches="24">24</div>
+                    <div class="inche" data-inches="26">26</div>
+                    <div class="inche" data-inches="28" >28</div>
+                    <div class="inche" data-inches="30">30</div>
+                    <div class="inche" data-inches="32">32</div>
                 </div>
                 <button class="chart">INCHES CHART </button>
                 <p class="model-wears"> Our model wears a 
