--- a/website/static/styles/display.css
+++ b/website/static/styles/display.css
@@ -147,7 +147,7 @@ a.active,a:hover {
     font-family: myFont;
     font-size: 50px;
 }
-.price_name {
+.price_name, .price {
     margin-right: 100px;
     font-weight: bold;
     font-family: myFont;
