--- a/website/static/styles/display.css
+++ b/website/static/styles/display.css
@@ -19,12 +19,12 @@
 }
 @font-face{
     font-family: myFont4;
-    src: url(SairaSemiCondensed-Regular.ttf);
+    src: url(NimbusSansNovusTOT-Reg.otf);
 }
 
 @font-face{
     font-family: myFont5;
-    src: url(Assistant-VariableFont_wght.ttf);
+    src: url(NimbusSanL-Reg.otf);
 }
 body {
         background: white;
@@ -294,7 +294,7 @@ p {
     align-items: center;
     justify-content: center;
     font-size: 40px;
-    font-family: myFont4;
+    font-family: myFont5;
 }
 .shopped-head {
     display: flex;
@@ -310,9 +310,7 @@ p {
     margin-top: 10px;
     font-family: myFont3;
     text-align: center;
-    font-size: 40px;
-    
-   
+    font-size: 40px; 
 }
 .order-details {
     width: 90%;
@@ -325,7 +323,9 @@ p {
     margin-top: 30px;
     margin-bottom: 30px;
     font-family: myFont4;
-    font-size: 6px;
+    color: black;
+    padding-bottom: 30px;
+    border-bottom: 1px solid rgb(218, 215, 215);
 }
 .name-details {
     margin: 0;
@@ -341,6 +341,91 @@ p {
 }
 .gram-details {
     display: block;
+}
+.box-inch {
+    border: 1px solid black;
+    padding-left: 15px;
+    padding-right: 130px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    font-family: myFont5;
+}
+.box-contain {
+    display: flex;
+}
+.box-quant {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 15px;
+    padding-right: 15px;
+    height: 40px;
+    border: 1px solid black;
+    font-size: 20px;
+    font-family: myFont5;
+}
+.box-plus, .box-minus {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 15px;
+    padding-right: 15px;
+    height: 40px;
+    color: black;
+    font-size: 20px;
+    font-family: myFont5;
+    border: none;
+    margin-right: 5px;
+    background-color: rgb(230, 227, 227);
+}
+.box-minus {
+    margin-left: 5px;
+}
+.p-tag {
+    font-size: 25px;
+    font-family: myFont5;
+    color: black;
+}
+.total-details {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.sub-total{
+    display: flex;
+    justify-content: space-between;
+    width: 400px;
+    color: black;
+    font-size: 16px;
+    font-family: myFont5;
+    padding-bottom: 10px;
+
+}
+.tot {
+    display: flex;
+    font-weight: bold;
+    font-size: 25px;
+    width: 400px;
+    color: black;
+    font-family: myFont5;
+    align-items: center;
+}
+
+.exclu {
+    margin-right: 41px;
+    font-weight: 100;
+    font-family: myFont5;
+    font-size: 16px;
+}
+.subb {
+    font-weight: bold;
+    font-size: 30px;
+    padding-left: 100px;
 }
 
 @media (max-width: 952px) {
